builder/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: test-ops-microservices
spec:
  selector:
    app: jenkins
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: agents
      protocol: TCP
      port: 50000
      targetPort: 50000
  type: NodePort
